# cb_find_duplicates

./: .gitignore  Makefile  README.md  aclocal.m4  cb_create_windows_dist.py  cb_find_duplicates.cppcheck  cb_find_duplicates.pro  cb_find_duplicates.pro.in  cb_find_duplicates.qrc  cb_put_licenses_on_files.py  config.h  config.h.in  config.status  configure  configure.ac
NSIS/: cb_find_duplicates.nsi
about/: about_english.txt  license_english.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
configure_tests/minimum_qt_version/: makefile  version_test.cpp  version_test.pro
configure_tests/qthread_openmp_test/: makefile  omp_test.cpp  omp_test.pro
lua_scripts/: SelectContainsBuild.lua  SelectContainsControlCenter4.lua  SelectManual.lua  SelectNewest.lua  SelectNewestLarge.lua  SelectOldest.lua  cb_select_all.lua  cb_select_contains_build.lua  cb_select_contains_control_center4.lua  cb_select_contains_copy.lua  cb_select_manual.lua  cb_select_newest.lua  cb_select_newest_creation.lua  cb_select_newest_large.lua  cb_select_newest_modification.lua  cb_select_newest_modification_large.lua  cb_select_none.lua  cb_select_oldest.lua  cb_select_oldest_creation.lua  cb_select_oldest_modification.lua
moc/: moc_cb_find_duplicates.cpp  moc_cb_log.cpp  moc_predefs.h
resources/: qrc_cb_find_duplicates.cpp
sources/: cb_abort.h  cb_constants.h  cb_dialog.cpp  cb_dialog.h  cb_filesystem_model.cpp  cb_filesystem_model.h  cb_find_duplicates.cpp  cb_find_duplicates.h  cb_log.cpp  cb_log.h  cb_lua_selector.cpp  cb_lua_selector.h  cb_main_window.cpp  cb_main_window.h  cb_qfile.cpp  cb_qfile.h  cb_result_model.cpp  cb_result_model.h  cb_support.cpp  cb_support.h  cb_worker.cpp  cb_worker.h
themes/: dark.cbt  default.cbt
ui/: cb_dialog.ui  cb_main_window.ui
ui/include/: ui_cb_dialog.h  ui_cb_main_window.h
